# macro-sentiment-agent

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.yml  macro_sentiment.db-journal  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CAS-ROADMAP.md  RUNBOOK.md
scripts/: check_secrets.py
src/macro_sentiment/: __init__.py  cli.py
src/macro_sentiment/api/: __init__.py  alerts.py  cas_contracts.py  cas_transport.py  dashboard.py  main.py  routes.py  scenario.py  sentiment_feed.py  websocket.py
src/macro_sentiment/backtest/: __init__.py  dataset.py  harness.py  metrics.py
src/macro_sentiment/core/: __init__.py  config.py  contracts.py  models.py
src/macro_sentiment/ingestion/: __init__.py  collector.py  dedup.py  normalizer.py  queue.py
src/macro_sentiment/nlp/: __init__.py  factory.py  fusion.py  hybrid.py  lexicon_fallback.py  llm_provider.py  ner.py  preprocess.py  router.py  sentiment_finbert.py  sentiment_llm.py  spam_filter.py
src/macro_sentiment/observability/: __init__.py  logging.py  metrics.py
tests/: conftest.py  test_alerts.py  test_api.py  test_backtest.py  test_baseline_persistence.py  test_calibration.py  test_cas_transport.py  test_fed.py  test_fusion.py  test_llm.py  test_newsapi.py  test_nlp.py  test_observability.py  test_pipeline.py  test_review.py  test_rss.py  test_scenario.py  test_sentiment_feed.py  test_signals.py  test_smoke.py  test_social.py  test_spam_filter.py
tests/fixtures/: backtest.jsonl  emotion_labeled.jsonl  sample_feed.xml  scenario.jsonl
(+21 files in other folders)
