[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-sentiment-agent"
version = "0.1.0"
description = "Finansal haber, Fed ve sosyal medya duyarlılık analizi ajanı"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "feedparser>=6.0",        # RSS connector
    "redis>=5.0",             # kuyruk + önbellek + dedup
    "sqlalchemy>=2.0",        # ORM
    "asyncpg>=0.29",          # async postgres
    "structlog>=24.1",        # yapılandırılmış log
]

[project.optional-dependencies]
nlp = [
    "transformers>=4.40",     # FinBERT
    "torch>=2.2",
    "spacy>=3.7",             # NER
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
